# generic-rust-api

./: Cargo.toml  README.md
generic-api/: Cargo.toml
generic-api/src/: config.rs  error.rs  http.rs  layers.rs  lib.rs  registry.rs  routes.rs  service.rs
generic-api/src/application/: app.rs  state.rs
generic-api/src/database/: connection.rs  mod.rs  query.rs  registry.rs  sql_pool.rs  state.rs
generic-api/src/database/sql/: mod.rs  resultset.rs  types.rs
generic-macros/: Cargo.toml
generic-macros/src/: lib.rs
generic-module/: Cargo.toml
generic-test/: Cargo.toml
generic-test/src/: main.rs
generic-test/src/application/: mod.rs  routes.rs  service.rs
generic-test/src/application/entities/: mod.rs  prelude.rs  product.rs  users.rs
generic-tool/: Cargo.toml
generic-tool/src/: lib.rs
generic-type/: Cargo.toml
generic-type/src/: routes.rs
