[workspace]
resolver = "2"
members = [
    "generic-api",
    "generic-macros", "generic-module", "generic-test", 
    "generic-tool", 
    "generic-type"
]

[workspace.dependencies]
inventory = "0.3.24"
syn = { version = "3", features = ["full", "extra-traits"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1"
proc-macro2 = "1.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
local-ip-address = "0.6"
sea-orm = { version = "2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
const_format = "0.2"
async-trait = "0.1"
chrono = "0.4.45"
strum = { version = "0.28.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
downcast-rs = "2.0.1"
